[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "ArchLinux's PKGBULD generator from Cargo.toml manifest file"
homepage = "https://github.com/kstep/cargo-pkgbuild"
license = "MIT/Apache-2.0"
name = "cargo-pkgbuild"
readme = "README.md"
version = "0.1.1"

[dependencies]
cargo = "0.54.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
toml = "0.5.8"
